@startuml
package models {
    ' Representando o DAO padrão do Django
    class models.Model <<DAO>> {
        + save()
        + delete()
        + objects: Manager
    }
}

package forecast {
    ' Classe abstrata ModeloDePrevisao
    abstract class ModeloDePrevisao {
        # nome_modelo: String
        # parametros: Dict
        + processar(entrada): Any
    }

    ' Classe especializada ModeloDePrevisaoImagem
    class ModeloDePrevisaoImagem {
        + processar(entrada: Dict): int
    }

    ModeloDePrevisaoImagem --|> ModeloDePrevisao

    ' Classe especializada ModeloDePrevisaoSerie
    class ModeloDePrevisaoSerie {
        + processar(entrada: Dict): int
    }

    ModeloDePrevisaoSerie --|> ModeloDePrevisao

    ' Classe Factory para gerar modelos de previsão
    class FactoryModeloDePrevisao {
        + gerar_modelo(nome_modelo: String, parametros: Dict): ModeloDePrevisao
    }

    FactoryModeloDePrevisao ..> ModeloDePrevisao : cria
}

package core {
    ' Classe Usuario herda de models.Model
    class Usuario {
        - user: OneToOneField<User>
        - locais_favoritos: ManyToManyField<Local>
        + save()
        + delete()
        + objects
    }

    Usuario --|> models.Model
    Usuario "0..*" --> "0..*" Local : salva

    ' Classe Local herda de models.Model
    class Local {
        - nome: String
        - latitude: Decimal
        - longitude: Decimal
        - avisos: ManyToManyField<Aviso>
        - informacoes: ManyToManyField<Informacao>
        + estimar(modelo: ModeloDePrevisao): Any
        + save()
        + delete()
        + objects
    }

    Local --|> models.Model
    Local "1" --> "0..*" Aviso : possui
    Local "1" --> "0..*" Informacao : possui
    Local ..> ModeloDePrevisao : utiliza

    ' Classe Previsao herda de models.Model
    class Previsao {
        - data: DateField
        - hora: TimeField
        - estimativa_pessoas: PositiveInteger
        - modelo: String
        - local: ForeignKey<Local>
        + save()
        + delete()
        + objects
    }

    Previsao --|> models.Model
    Previsao "0..*" --> "1" Local : pertence

    ' Classe Aviso herda de models.Model
    class Aviso {
        - descricao: Text
        - tipo: String
        - fonte: String
        - data: DateField
        + save()
        + delete()
        + objects
    }

    Aviso --|> models.Model

    ' Classe Informacao herda de models.Model
    class Informacao {
        - tipo: String
        - descricao: Text
        - imagem: ImageField
        - usuario: ForeignKey<Usuario>
        + save()
        + delete()
        + objects
    }

    Informacao --|> models.Model
    Informacao "0..*" --> "1" Usuario : enviada_por
}
@enduml
